2004-11-17  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/InetAddress/IPv6.java: New testcases.

2004-11-15  Michael Koch  <konqueror@gmx.de>

	* configure.in: Change default mail host from '/tmp' (?) to
	'mx10.gnu.org'as stated by configure --help.
	* configure: Regenerated.

2004-11-14  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/equals.java: 
	added check for scanlineStride.
	
2004-11-14  Noa Resare  <noa@resare.com>

	* gnu/testlet/java/text/SimpleDateFormat/parse.java:
	New tests.

2004-11-11  David Gilbert  <david.gilbert@object-refinery.com>

	* 
	gnu/testlet/java/text/SimpleDateFormat/getDateFormatSymbols.java,
	gnu/testlet/java/text/SimpleDateFormat/setDateFormatSymbols.java:
	New tests;
	* gnu/testlet/java/text/DateFormatSymbols/setAmPmStrings.java,
	gnu/testlet/java/text/DateFormatSymbols/setEras.java,
	gnu/testlet/java/text/DateFormatSymbols/setMonths.java,
	gnu/testlet/java/text/DateFormatSymbols/setShortMonths.java,
	gnu/testlet/java/text/DateFormatSymbols/setShortWeekdays.java,
	gnu/testlet/java/text/DateFormatSymbols/setZoneStrings.java: New
	tests.
	
2004-11-10  Stephen Crawley  <crawley@dstc.edu.au>

	* gnu/testlet/SimpleTestHarness.java : minor tweak to a diagnostic

2004-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/AWTKeyStroke/equals.java,
	gnu/testlet/java/awt/AWTKeyStroke/getAWTKeyStroke.java,
	gnu/testlet/java/awt/AWTKeyStroke/serialization.java: New tests.
	
2004-11-08  Robert Schuster <thebohemian@gmx.net>

	gnu/testlet/java/beans/Introspector/getBeanInfo2_2.java:
	new test
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2TestClass.java:
	new helper class for above test

2004-11-07  Robert Schuster <thebohemian@gmx.net>

	Tests for bug #10938:
	gnu/testlet/java/beans/Introspector/getBeanInfo2.java:
	new file

	gnu/testlet/java/beans/Introspector/getBeanInfoTestClass.java:
	extended documentation for getBeanInfo2 test
